[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/game_mode_select.gd" type="Script" id=1]
[ext_resource path="res://theme-default.tres" type="Theme" id=2]
[ext_resource path="res://art-built/9patch/background-game.png" type="Texture2D" id=3]
[ext_resource path="res://scripts/background.gd" type="Script" id=4]
[ext_resource path="res://art-built/button-multiplayer.png" type="Texture2D" id=5]
[ext_resource path="res://fonts/Amaranth-Regular-24.tres" type="FontFile" id=6]
[ext_resource path="res://art-built/button-vs-ai.png" type="Texture2D" id=7]
[ext_resource path="res://art-built/button-tutorial.png" type="Texture2D" id=8]
[ext_resource path="res://fonts/Amaranth-Regular-36.tres" type="FontFile" id=9]
[ext_resource path="res://art-built/button-back-small.png" type="Texture2D" id=10]

[node name="game_mode_select" type="Node"]
script = ExtResource( 1 )

[node name="ui" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="bg" type="Sprite2D" parent="ui"]
position = Vector2( -1.70459, 1.70459 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 540, 960 )
script = ExtResource( 4 )

[node name="button_multiplayer" type="TextureButton" parent="ui"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -197.0
offset_top = -565.0
offset_right = 197.0
offset_bottom = -413.0
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="wins_label" type="Label" parent="ui/button_multiplayer"]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -369.0
offset_top = 7.0
offset_right = -31.0
offset_bottom = 57.0
theme_override_fonts/font = ExtResource( 6 )
text = "Wins: 42"
align = 2
valign = 1

[node name="button_ai" type="TextureButton" parent="ui"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -197.0
offset_top = -382.0
offset_right = 197.0
offset_bottom = -230.0
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="button_tutorial" type="TextureButton" parent="ui"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -197.0
offset_top = -201.0
offset_right = 197.0
offset_bottom = -127.0
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="label" type="Label" parent="ui"]
anchor_right = 1.0
offset_top = 93.0
offset_bottom = 133.0
theme_override_fonts/font = ExtResource( 9 )
text = "Select game mode"
align = 1

[node name="back_button" type="TextureButton" parent="ui"]
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -100.0
offset_right = 151.0
offset_bottom = -12.0
texture_normal = ExtResource( 10 )
expand = true
stretch_mode = 5

